ingresses/identity-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2is-ingress
  namespace: wso2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - wso2is
  rules:
  - host: wso2is
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2is-service
          servicePort: 9443
